# Django-app

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/django_app/: hello.py
tests/: test_hello.py
