[project]
name = "django-app"
version = "0.1.0"
description = ""
authors = [
    {name = "hw562552238-byte",email = "hw562552238@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2.4,<6.0.0)"
]

[tool.poetry]
packages = [{include = "django_app", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"
pytest-django = "^4.11.1"
mypy = "^1.17.0"
django-stubs = {extras = ["compatible-mypy"], version = "^5.2.2"}
django-stubs-ext = "^5.2.2"
ipython = "^9.4.0"
notebook = "^7.4.4"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
